[package]
name = "super-basic-pallet"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "An example FRAME pallet for demonstration purposes."


[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false}
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false}
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false}
sp-io = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false}
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false}
sp-std = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false}
sp-arithmetic = { version = "16.0.0", git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.2.0", default-features = false}

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "pallet-balances/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std"
]